--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* Global rules (global variables, elements, defaults, etc.) */
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,3 +8,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  background-image: url('./images/magic-the-gathering.jpg');
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
