--- a/src/components/ExploreCards.css
+++ b/src/components/ExploreCards.css
@@ -2,6 +2,7 @@
   background-image: url('./../images/background-1.jpg');
   background-size: cover;
   background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .ExploreCards-div {
@@ -14,6 +15,10 @@
 
 .ExploreCards-div-image {
   height: 300px;
+  background-image: url('./../images/placeholder.png');
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 /* .ExploreCards-image {
